<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_120sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/signup"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:contentDescription="TODO" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayoutpassword"
            style="@style/text_input_style"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/inputTextLayoutemail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayoutemail"
            style="@style/text_input_style"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"

            android:hint="@string/email"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPassword"
            app:layout_constraintTop_toBottomOf="@id/inputTextLayoutpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"

            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/inputTextLayoutpassword" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/_150sdp"
            android:padding="@dimen/_2sdp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgetPassword"
            android:layout_marginTop="@dimen/_30sdp"

            android:text="@string/sign_in"

            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:backgroundTintMode="add"

            android:background="@drawable/backgrund_button"
            android:elevation="@dimen/_1sdp"
            android:textSize="@dimen/_20sdp"
            android:textAllCaps="false"
            android:id="@+id/login" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintTop_toBottomOf="@id/login"
            android:background="@android:color/black"
            android:layout_marginTop="@dimen/_50sdp"
            android:id="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/view"
            app:layout_constraintBottom_toBottomOf="@id/view"
            android:background="@drawable/backgrundcircil"
            android:padding="@dimen/_7sdp" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/logosfacebook"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginTop="@dimen/_60sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_50sdp"
            android:id="@+id/facebook" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/logo_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:id="@+id/google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/create_a_new_account"

            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>