<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_120sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/signup"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:contentDescription="TODO" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayoutfirstname"
            style="@style/text_input_style"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:hint="@string/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayoutlastname"
            style="@style/text_input_style"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"

            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/last_name"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayoutEmail"
            style="@style/text_input_style"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/email"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTextLayoutfirstname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextLayoutPassword"
        style="@style/text_input_style"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/inputTextLayoutEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_12sdp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textgender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/choose_gender"
        android:fontFamily="@font/rta_regular"

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:textColor="#AD000000"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/inputTextLayoutPassword"

        tools:ignore="MissingConstraints" />

    <Spinner

        android:id="@+id/gender"
       android:background="@drawable/stily_backgrundspinner"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
       android:spinnerMode="dialog"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textgender"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/textcuntrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:fontFamily="@font/rta_regular"

        android:text="@string/choose_country"
        android:textColor="#AD000000"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <Spinner
        android:id="@+id/cuntrey"
        android:background="@drawable/stily_backgrundspinner"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="clip_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcuntrey"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/textcitys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/rta_regular"
        android:text="@string/choose_city"
        android:textColor="#AD000000"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuntrey" />

    <Spinner
        android:id="@+id/citys"
       android:background="@drawable/stily_backgrundspinner"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="clip_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/cuntrey"
        app:layout_constraintTop_toBottomOf="@+id/textcitys"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/_150sdp"
        android:padding="@dimen/_2sdp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/citys"
        android:layout_marginTop="@dimen/_30sdp"

        android:text="Continue"

        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:backgroundTintMode="add"

        android:background="@drawable/backgrund_button"
        android:elevation="@dimen/_1sdp"
        android:textSize="@dimen/_20sdp"
        android:textAllCaps="false"
        android:id="@+id/signup" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_an_account"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>